# llm-slide-deck

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
google/: create_slides.py  google_slides.html  google_slides.qmd
powerpoint/: EDF_Presentation_powerpoint_slides.pptx  create_powerpoint.py  create_powerpoint_slides.py  doc.md  powerpoint_slides.html  powerpoint_slides.qmd
quarto/: presentation.html  presentation.qmd  styles.css
raw/: presentation.html
site_libs/bootstrap/: bootstrap-f58237b8dbaec9f7a7579422e25518ef.min.css
