[project]
name = "llm-slide-deck"
version = "0.1.0"
description = "LLM Slide Decks"
authors = [
    { name = "Nicolas Brosse", email = "nicolas.brosse@gmail.com" }
]
repository = "https://github.com/nbrosse/llm-slide-deck"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.175.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pillow>=11.3.0",
    "python-pptx>=1.0.2",
]

[tool.ruff]
line-length = 120